# data-forge-elt

./: .dockerignore  .env.example  .gitignore  README.md  config.py  directives.txt  main.py  pyproject.toml  structure.md
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py
app/services/: __init__.py  crawl_service.py  dataset_service.py  dbt_service.py  kaggle_service.py  pipeline_service.py
app/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
config/: settings.py
crawlers/: __init__.py
crawlers/base/: __init__.py  browser.py  crawler.py  models.py  robots.py  (+2 more)
dashboard/: requirements.txt  streamlit_app.py
datalake/: __init__.py  manager.py  models.py  versioning.py
dbt/: .gitignore  README.md  dbt_project.yml  profiles.yml
docker/: Dockerfile.api  Dockerfile.streamlit  Dockerfile.ui  docker-compose.prod.yml  docker-compose.yml  nginx.ui.conf
ingestion/: __init__.py
orchestration/: __init__.py  models.py  pipeline.py  registry.py  scheduler.py  steps.py
scripts/: deploy.sh  prod-deploy.sh  setup.sh
shared/: __init__.py  access.py  exception.py  exceptions.py  log_stream.py  logger.py  metrics.py  notifier.py  retry.py  storage_s3.py  utils.py
tests/: conftest.py  test_api.py  test_base_crawler.py  test_crawlers.py  test_datalake.py  test_exceptions.py  test_ingestion.py  test_logger.py  test_metrics.py  test_notifier.py  test_orchestration.py  test_retry.py  test_services.py  test_settings.py  test_utils.py  test_warehouse.py
warehouse/: __init__.py
(+99 files in other folders)
